= Version 0.8.0

  * [API] AMQP::Queue#initialize now accepts :arguments option that takes a hash. RabbitMQ
          recognizes x-message-ttl argument and uses it as message TTL in milliseconds for
	  queue that is being declared.
  * [API] AMQP#Logger is deprecated. It will be removed before 1.0 release.
  * [API] AMQP#fork is deprecated. It will be removed before 1.0 release.
  * [API] AMQP::RPC is deprecated. It will be removed before 1.0 release.
  * [FEATURE] Significant improvements to the documentation
  * [FEATURE] Support for RabbitMQ extensions to AMQP 0.9.1
  * [API] AMQP::Exchange#publish now accepts (an optional) block that is called as soon as message
          is considered published (EventMachine loop has pushed payload down the network stack).
  * [API] AMQP::Channel.new now accepts (an optional) block and yields newly opened channel to it as soon as
          channel.open-ok arrives from the broker.
  * [API] AMQP::Header#ack now can acknowledge multiple deliveries
  * [API] AMQP::Exchange#delete now takes (an optional) block that is called when exchange.delete-ok response arrives.
  * [API] AMQP::Header now implements #to_hash
  * [API] AMQP::Queue#pop block now can take 1, 2 or 3 arguments.
          1 argument means handler is only interested in content payload
	  2 arguments mean handler is interested in headers and the content
	  3 arguments mean handler is interested in headers, content and AMQP method instance
  * [API] AMQP::Queue#purge  now takes an optional block which is called when queue.purge-ok response arrives.
  * [API] AMQP::Queue#delete now takes an optional block which is called when queue.delete-ok response arrives.
  * [API] AMQP::Queue#delete now accepts :nowait option.
  * [API] AMQP::Queue#unbind now takes an optional block which is called when queue.unbind-ok response arrives.
  * [API] AMQP::Queue#unbind now accepts :routing_key as alias to :key. we believe it is a good idea to use AMQP terms.