@@ -1,5 +1,7 @@
 = Version 0.8.0
 
+  * [API] AMQP::Exchange#initialize now accepts :arguments option that takes a hash. Brokers
+          may implement AMQP extensions using (usually x-prefixed) declaration arguments.
   * [API] AMQP::Queue#initialize now accepts :arguments option that takes a hash. RabbitMQ
           recognizes x-message-ttl argument and uses it as message TTL in milliseconds for
 	  queue that is being declared.
